--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "socket.io": "0.9.x",
     "node-uuid": "1.3.3"
   },
-  "engine": {
-    "node": "0.6.x"
+  "engines": {
+    "node": "0.8.x"
+  },
+  "subdomain": {
+	"enemyunknown"
+  },
+  "scripts.start": {
+	"app.js"
   }
 }
