--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Beck, Frank, and Yi's Comp460 game.",
   "version": "1.0.0-79",
   "dependencies": {
-    "express": "2.5.x",
-    "socket.io": "0.9.x",
+    "express.io": "1.1.x",
     "node-uuid": "1.3.3"
   },
   "engines": {
